# DryWall_Crack_Segmentation

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  smoke_test.py
docs/: Plan_Milestone.md  additional_experiments.md  assignment.md  final_report.md  final_report_v2.md  progress.md  supplementary_work.md
reports/: dedup_cracks_verification_train.txt  eval_segformer_best.csv  eval_segformer_best.txt  eval_segformer_dice_bce.txt  failure_analysis_segformer_b2_film_baseline_20260315_135901.txt  failure_analysis_segformer_b2_film_baseline_20260315_192614.txt  failure_analysis_unet++_resnet34_baseline_20260315_135027.txt  failure_analysis_unet++_resnet34_baseline_20260315_192504.txt  failure_analysis_unet_resnet34_baseline_20260315_192543.txt  mask_quality_report.txt  mask_quality_report_2.txt
reports/classical_cv_evaluation/: evaluation_results.json
src/augmentations/: transforms.py
src/classical_cv/: evaluate_classical_methods.py
src/configs/: config.py  experiment.yaml  segformer_boundary.yaml  segformer_crack_aug.yaml  segformer_experiment.yaml  segformer_resume_onecycle.yaml  unet_boundary.yaml  unet_crack_aug.yaml  unet_experiment.yaml  unet_resume_cosine.yaml  unet_resume_onecycle.yaml
src/data/: dataset.py
src/evaluation/: evaluate.py
src/models/: film_wrapper.py  prompt_encoder.py  segformer.py  smp_models.py
src/training/: losses.py  metrics.py  trainer.py
src/utils/: seed.py
src/visualization/: verify_drywall.py  visualize_crack_aug.py  visualize_dataloader.py  visualize_dataset.py  visualize_failures.py  visualize_interactive.py  (+2 more)
(+23 files in other folders)
