[project]
name = "10x-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.26.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.3.0",
    "transformers>=4.30.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.13.0",
    "scipy>=1.10.0",
    "setuptools>=82.0.1",
]
